# substrate2

./: .gitignore  .release-please-manifest.json  Cargo.toml  Justfile  LICENSE  README.md  codecov.yml  release-notes.md  release-please-config.json  renovate.json  rust-toolchain.toml
bins/cdl2spice/: CHANGELOG.md  Cargo.toml
bins/cdl2spice/src/: main.rs
bins/sky130spconv/: CHANGELOG.md  Cargo.toml  README.md
bins/sky130spconv/src/: main.rs
bins/spicemerge/: CHANGELOG.md  Cargo.toml
bins/spicemerge/src/: main.rs
cache/: Cargo.toml
cache/src/: client.rs  lib.rs  rest_api.rs
codegen/: CHANGELOG.md  Cargo.toml  build.rs
codegen/src/: block.rs  common.rs  derive.rs  io.rs  layout.rs  lib.rs  pdk.rs  schematic.rs  sim.rs  simulation.rs
codegen/src/analog_io/: mod.rs
codegen/src/block/: layout.rs  mod.rs  schematic.rs
codegen/src/geometry/: translate.rs
codegen/src/io/: mod.rs
codegen/src/pdk/: corner.rs  layers.rs  mod.rs  supported_pdks.rs
codegen/src/sim/: mod.rs  save.rs
config/: CHANGELOG.md  Cargo.toml
config/src/: lib.rs  paths.rs  tests.rs  toml.rs
config/src/config/: de.rs  environment.rs  key.rs  mod.rs  path.rs  value.rs
config/src/home/: env.rs  mod.rs  windows.rs
config/src/raw/: de.rs  environment.rs  key.rs  mod.rs  path.rs  value.rs
config/test_substrate_config/.substrate/: config.toml
docs/examples/: CHANGELOG.md  Cargo.toml
docs/examples/examples/: core.rs  selftest.rs
docs/examples/src/: lib.rs
examples/sky130_inverter/: Cargo.toml
examples/sky130_inverter/src/: lib.rs  tb.rs
examples/spice_vdivider/: .gitignore  Cargo.toml
examples/spice_vdivider/src/: lib.rs
examples2/vdivider/: Cargo.toml
examples2/vdivider/src/: lib.rs
gds/: CHANGELOG.md  Cargo.toml
gds/src/: lib.rs  read.rs
libs/atoll/: CHANGELOG.md  Cargo.toml
libs/atoll/src/: abs.rs  fold.rs  grid.rs  lib.rs  resizing.rs  route.rs  straps.rs  tiling.rs
libs/cache/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cache.sqlite
libs/cache/proto/: cache.proto  local.proto  remote.proto
libs/cache/src/: client.rs  error.rs  hierarchical.rs  lib.rs  mem.rs  multi.rs  server.rs
libs/enumify_macros/: CHANGELOG.md  Cargo.toml
libs/enumify_macros/src/: impls.rs  lib.rs
libs/gds/: CHANGELOG.md  Cargo.toml
libs/gds/src/: lib.rs  read.rs  ser.rs  tests.rs  write.rs
libs/gdsconv/: CHANGELOG.md  Cargo.toml
libs/gdsconv/data/: buffer.gds
libs/gdsconv/src/: conv.rs  export.rs  import.rs  lib.rs  tests.rs
libs/geometry/: CHANGELOG.md  Cargo.toml
libs/geometry/src/: align.rs  bbox.rs  dims.rs  dir.rs  lib.rs  orientation.rs  point.rs  polygon.rs  prelude.rs  rect.rs  ring.rs  shape.rs  transform.rs
libs/geometry_macros/: CHANGELOG.md  Cargo.toml  release-please-config.json
libs/geometry_macros/src/: lib.rs
libs/layir/: CHANGELOG.md  Cargo.toml
libs/layir/src/: connectivity.rs  id.rs  lib.rs
libs/nutlex/: CHANGELOG.md  Cargo.toml
libs/nutlex/examples/: netlist.ascii.raw  netlist.bin.raw  netlist2.ascii.raw  netlist2.bin.raw  ngspice.bin.raw  rawspice_ascii.raw
libs/nutlex/src/: lib.rs
libs/psfparser/: CHANGELOG.md  Cargo.toml  README.md
libs/psfparser/examples/: AcZout.ac  dc1.dc  dc2.dc  dcop.bin.dc  dcsweepi.bin.dc  dcsweepv.bin.dc  frequencySweep.ac  timeSweep1.tran.tran  timeSweep2.tran.tran  tranbin1.tran.tran  vdiv_sin_ascii.tran.tran  vdiv_sin_bin.tran.tran
libs/psfparser/src/: lib.rs  tests.rs
libs/scir/: CHANGELOG.md  Cargo.toml
libs/scir/src/: blackbox.rs  drivers.rs  lib.rs  merge.rs  netlist.rs  schema.rs  slice.rs  tests.rs  validation.rs
libs/spice/: CHANGELOG.md  Cargo.toml
libs/spice/data/: AA_rdac.cdl  blackbox.spice  buffer.spice  buffer_commercial.spice  inverter.spice  inverter2.spice  pex_netlist.spice  res_100.spice
libs/spice/src/: lib.rs  netlist.rs  tests.rs
libs/spice/tests/: AA_rdac.src.net
libs/type_dispatch/: CHANGELOG.md  Cargo.toml  README.md
libs/type_dispatch/src/: derive.rs  lib.rs  tests.rs
libs/type_dispatch_macros/: CHANGELOG.md  Cargo.toml  README.md
libs/type_dispatch_macros/src/: const_dispatch.rs  impl_dispatch.rs  impls.rs  lib.rs  type_dispatch.rs  types.rs
scir/: CHANGELOG.md  Cargo.toml
scir/src/: lib.rs  merge.rs  slice.rs  tests.rs  validation.rs
substrate/: CHANGELOG.md  Cargo.toml  build.rs
substrate-api/: CHANGELOG.md  Cargo.toml
substrate-api/docs/layout/: generate.md
substrate-api/src/: block.rs  context.rs  error.rs  generator.rs  lib.rs
substrate-api/src/io/: impls.rs  mod.rs
substrate-api/src/layout/: builder.rs  cell.rs  context.rs  draw.rs  element.rs  error.rs  gds.rs  mod.rs
substrate-api/src/pdk/: corner.rs  layers.rs  mod.rs
substrate-api/src/schematic/: cell.rs  conv.rs  example.rs  interface.rs  mod.rs
substrate-api/src/simulation/: data.rs  mod.rs  waveform.rs
substrate/docs/layout/: buffer.md  inverter.md
substrate/examples/: substrate.rs
substrate/src/: block.rs  cache.rs  context.rs  diagnostics.rs  error.rs  execute.rs  generator.rs  ios.rs  lib.rs  lut.rs  tests.rs  tiler.rs
substrate/src/block/: mod.rs  tests.rs
substrate/src/cache/: mod.rs  tests.rs
substrate/src/data/: mod.rs
substrate/src/execute/: mod.rs  tests.rs
substrate/src/io/: impls.rs  layout.rs  mod.rs  schematic.rs
substrate/src/layout/: bbox.rs  builder.rs  cell.rs  context.rs  conv.rs  draw.rs  element.rs  error.rs  gds.rs  group.rs  mod.rs  schema.rs  tests.rs  tiling.rs  tracks.rs
substrate/src/pdk/: corner.rs  data.rs  example_pdk.rs  example_pdk.toml  layers.rs  mod.rs  primitives.rs
substrate/src/schematic/: cell.rs  context.rs  conv.rs  instance.rs  interface.rs  mod.rs  netlist.rs  parallel.rs  pex.rs  primitives.rs  schema.rs  tests.rs
substrate/src/simulation/: data.rs  mod.rs  options.rs  waveform.rs
substrate/src/tests/: colbuf.rs  mod.rs
substrate/src/types/: codegen.rs  impls.rs  layout.rs  mod.rs  schematic.rs  tests.rs
tests/: CHANGELOG.md  Cargo.toml
tests/src/: bsub.rs  cache.rs  gds.rs  hard_macro.rs  io.rs  layout.rs  lib.rs  netlist.rs  paths.rs  pdk.rs  schematic.rs  scir.rs
(+571 files in other folders)
