[workspace]

resolver = "2"
members = [
    "bins/cdl2spice",
    "bins/spicemerge",
    "codegen",
    "config",
    "docs/snippets",
    "examples",
    "examples/latest/sky130_inverter",
    "examples/latest/spice_vdivider",
    "examples/latest/colbuf",
    "examples/latest/vdivider",
    "examples/latest/via",
    "examples/latest/substrate_api_examples",
    "libs/cache",
    "libs/diagnostics",
    "libs/layir",
    "libs/enumify",
    "libs/enumify_macros",
    "libs/gds",
    "libs/gdsconv",
    "libs/geometry",
    "libs/geometry_macros",
    "libs/lefdef",
    "libs/pathtree",
    "libs/psfparser",
    "libs/scir",
    "libs/spice",
    "libs/macrotools",
    "libs/nutlex",
    "libs/type_dispatch",
    "libs/type_dispatch_macros",
    "libs/uniquify",
    "libs/verilog",
    "pdks/sky130",
    "substrate",
    "tools/magic",
    "tools/netgen",
    "tools/ngspice",
    "tools/pegasus",
    "tools/quantus",
    "tools/spectre", 
    "tools/magic_netgen",
]

exclude = ["examples/release"]

