[workspace]

resolver = "2"
members = [
    "bins/cdl2spice",
    "bins/spicemerge",
    "bins/sky130spconv",
    "codegen",
    "config",
    "docs/snippets",
    "examples",
    "examples/latest/sky130_inverter",
    "examples/latest/strongarm",
    "examples/latest/spice_vdivider",
    "examples/latest/colbuf",
    "examples/latest/vdivider",
    "examples/latest/via",
    "examples/latest/resistor_bank",
    "examples/latest/substrate_api_examples",
    "libs/atoll",
    "libs/cache",
    "libs/diagnostics",
    "libs/layir",
    "libs/enumify",
    "libs/enumify_macros",
    "libs/gds",
    "libs/gdsconv",
    "libs/geometry",
    "libs/geometry_macros",
    "libs/lefdef",
    "libs/pathtree",
    "libs/psfparser",
    "libs/scir",
    "libs/spice",
    "libs/macrotools",
    "libs/nutlex",
    "libs/type_dispatch",
    "libs/type_dispatch_macros",
    "libs/uniquify",
    "libs/verilog",
    "pdks/sky130",
    "substrate",
    "tools/magic",
    "tools/netgen",
    "tools/ngspice",
    "tools/pegasus",
    "tools/quantus",
    "tools/spectre", 
    "tools/magic_netgen",
]

exclude = ["examples/release"]

[workspace.dependencies]
serde = "1"
arcstr = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
tera = "1"
lazy_static = "1"
tracing = "0.1"
indexmap = "2"
unicase = "2"
approx = "0.5"
thiserror = "2"
toml = "0.9"
toml_edit = "0.24"
darling = "0.23"
syn = "2"
convert_case = "0.11"
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
proc-macro-crate = "3"
itertools = "0.14"
clap = "4"
anyhow = "1"
