[package]
name = "codegen"
version = "0.10.2"
edition = "2024"

[dependencies]
darling = "0.20"
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
convert_case = "0.8"

snippets = { version = "0.7.0", registry = "substrate", path = "../docs/snippets" }
macrotools = { version = "0.2.0", registry = "substrate", path = "../libs/macrotools" }

[dev-dependencies]
substrate = { version = "<=0.10.2", registry = "substrate", path = "../substrate" }
scir = { version = "<=0.9.1", registry = "substrate", path = "../libs/scir" }
arcstr = "1"
rust_decimal = "1"
rust_decimal_macros = "1"

[build-dependencies]
snippets = { version = "0.7.0", registry = "substrate", path = "../docs/snippets" }
examples = { version = "0.2.0", registry = "substrate", path = "../examples" }

[lib]
proc-macro = true
