[package]
name = "codegen"
version = "0.10.2"
edition = "2024"

[dependencies]
darling = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
convert_case = { workspace = true }

snippets = { version = "0.7.0", registry = "substrate", path = "../docs/snippets" }
macrotools = { version = "0.2.0", registry = "substrate", path = "../libs/macrotools" }

[dev-dependencies]
substrate = { version = "<=0.10.2", registry = "substrate", path = "../substrate" }
scir = { version = "<=0.9.1", registry = "substrate", path = "../libs/scir" }
arcstr = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[build-dependencies]
snippets = { version = "0.7.0", registry = "substrate", path = "../docs/snippets" }
examples = { version = "0.2.0", registry = "substrate", path = "../examples" }

[lib]
proc-macro = true
