[package]
name = "config"
version = "0.2.5"
edition = "2021"

[dependencies]
anyhow = "1"
lazycell = "1"
serde = { version = "1", features = ["derive"] }
toml_edit = "0.20"
log = "0.4"
toml = "0.8"

cache = { version = "0.5.0", registry = "substrate", path = "../libs/cache" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
]
