[package]
name = "gds"
version = "0.0.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.9.0"
derive_more = "0.99.17"
num-derive = "0.3"
num-traits = "0.2.15"
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.7.5"
tempfile = { version = "3", optional = true }
arcstr = { version = "1.1.5", features = ["serde"] }
textwrap = "0.14.2"

[dev-dependencies]
tempfile = {version = "3"}

[features]
selftest = ["tempfile"]
