[package]
name = "substrate_api"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
arcstr = { version = "1", features = ["serde"] }
thiserror = "1"
once_cell = "1"

geometry = { version = "0.1.0", registry = "substrate", path = "../geometry" }

[dev-dependencies]
crossbeam-channel = "0.5"
toml = "0.7"
substrate = { version = "0.0.0", registry = "substrate", path = "../substrate" }
