[package]
name = "substrate"
version = "0.8.1"
edition = "2021"
include = ["src", "build/docs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
arcstr = { version = "1", features = ["serde"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
impl-trait-for-tuples = "0.2"
tracing = "0.1"
rust_decimal = "1"
rust_decimal_macros = "1"
ena = "0.14"
duplicate = "1"
derive_builder = "0.12"
slotmap = "1"
downcast-rs = "1"
indexmap = { version = "2", features = ["serde"] }
num = { version = "0.4", features = ["serde"] }

config = { version = "0.2.5", registry = "substrate", path = "../config" }
examples = { version = "0.5.1", registry = "substrate", path = "../docs/examples" }
cache = { version = "0.5.0", registry = "substrate", path = "../libs/cache" }
codegen = { version = "0.8.1", registry = "substrate", path = "../codegen" }
geometry = { version = "0.5.0", registry = "substrate", path = "../libs/geometry" }
gds = { version = "0.3.0", registry = "substrate", path = "../libs/gds" }
enumify = { version = "0.1.0", registry = "substrate", path = "../libs/enumify" }
scir = { version = "0.7.0", registry = "substrate", path = "../libs/scir" }
pathtree = { version = "0.2.0", registry = "substrate", path = "../libs/pathtree" }
type_dispatch = { version = "0.3.0", registry = "substrate", path = "../libs/type_dispatch" }
uniquify = { version = "0.2.0", registry = "substrate", path = "../libs/uniquify" }
splines = { version = "4.3.1", features = ["serde"] }

[dev-dependencies]
toml = "0.8"
approx = "0.5"
sky130pdk = { version = "<=0.8.1", registry = "substrate", path = "../pdks/sky130pdk" }
spectre = { version = "<=0.9.1", registry = "substrate", path = "../tools/spectre" }
spice = { version = "<=0.7.1", registry = "substrate", path = "../libs/spice" }
float_eq = "1.0.1"

