[package]
name = "substrate"
version = "0.10.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
arcstr = { version = "1", features = ["serde"] }
anyhow = "1"
thiserror = "2"
once_cell = "1"
impl-trait-for-tuples = "0.2"
tracing = "0.1"
test-log = { version = "0.2", features = ["log", "trace"] }
rust_decimal = "1"
rust_decimal_macros = "1"
ena = "0.14"
duplicate = "2"
derive_builder = "0.20"
slotmap = "1"
downcast-rs = "2"
indexmap = { version = "2", features = ["serde"] }
num = { version = "0.4", features = ["serde"] }
splines = { version = "4", features = ["serde"] }
derive-where = "1"

config = { version = "0.4.1", registry = "substrate", path = "../config" }
snippets = { version = "0.7.0", registry = "substrate", path = "../docs/snippets" }
cache = { version = "0.7.1", registry = "substrate", path = "../libs/cache" }
codegen = { version = "0.10.3", registry = "substrate", path = "../codegen" }
layir = { version = "0.2.1", registry = "substrate", path = "../libs/layir" }
geometry = { version = "0.7.1", registry = "substrate", path = "../libs/geometry" }
gds = { version = "0.4.1", registry = "substrate", path = "../libs/gds" }
gdsconv = { version = "0.2.1", registry = "substrate", path = "../libs/gdsconv" }
enumify = { version = "0.2.1", registry = "substrate", path = "../libs/enumify" }
scir = { version = "0.9.1", registry = "substrate", path = "../libs/scir" }
pathtree = { version = "0.3.0", registry = "substrate", path = "../libs/pathtree" }
type_dispatch = { version = "0.5.1", registry = "substrate", path = "../libs/type_dispatch" }
uniquify = { version = "0.4.0", registry = "substrate", path = "../libs/uniquify" }

[dev-dependencies]
approx = "0.5"
lazy_static = "1"

[build-dependencies]
snippets = { version = "0.7.0", registry = "substrate", path = "../docs/snippets" }
examples = { version = "0.2.0", registry = "substrate", path = "../examples" }
