[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
arcstr = "1"
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }

geometry = { version = "0.1.0", registry = "substrate", path = "../geometry" }
substrate = { version = "0.0.0", registry = "substrate", path = "../substrate" }
scir = { version = "0.0.0", registry = "substrate", path = "../scir" }
spice = { version = "0.0.0", registry = "substrate", path = "../netlist/spice" }
spectre = { version = "0.0.0", registry = "substrate", path = "../tools/spectre" }
sky130pdk = { version = "0.0.0", registry = "substrate", path = "../pdks/sky130pdk" }
