[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
arcstr = "1"
anyhow = "1"
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
approx = "0.5"
lazy_static = "1"

geometry = { version = "0.2.0", registry = "substrate", path = "../libs/geometry" }
substrate = { version = "0.1.1", registry = "substrate", path = "../substrate" }
scir = { version = "0.1.0", registry = "substrate", path = "../scir" }
cache = { version = "0.1.0", registry = "substrate", path = "../libs/cache" }
spice = { version = "0.0.0", registry = "substrate", path = "../netlist/spice" }
spectre = { version = "0.1.1", registry = "substrate", path = "../tools/spectre" }
sky130pdk = { version = "0.1.1", registry = "substrate", path = "../pdks/sky130pdk" }

[features]
spectre = []

