[package]
name = "cdl2spice"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arcstr = "1"

scir = { version = "0.9.1", registry = "substrate", path = "../../libs/scir" }
spice = { version = "0.9.2", registry = "substrate", path = "../../libs/spice" }
