[package]
name = "cdl2spice"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
arcstr = { workspace = true }

scir = { version = "0.9.1", registry = "substrate", path = "../../libs/scir" }
spice = { version = "0.9.2", registry = "substrate", path = "../../libs/spice" }
