[package]
name = "sky130spconv"
version = "0.1.1"
edition = "2024"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arcstr = "1"

scir = { version = "0.9.2", registry = "substrate", path = "../../libs/scir" }
spice = { version = "0.9.3", registry = "substrate", path = "../../libs/spice" }
sky130 = { version = "0.10.3", registry = "substrate", path = "../../pdks/sky130" }
thiserror = "2"
