[package]
name = "spicemerge"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arcstr = "1"

scir = { version = "0.9.1", registry = "substrate", path = "../../libs/scir" }
spice = { version = "0.9.3", registry = "substrate", path = "../../libs/spice" }
