[package]
name = "spicemerge"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
arcstr = "1"

scir = { version = "0.9.2", registry = "substrate", path = "../../libs/scir" }
spice = { version = "0.9.4", registry = "substrate", path = "../../libs/spice" }
