[package]
name = "examples"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1"
proc-macro-error = "1"
textwrap = "0.16"

[dev-dependencies]
arcstr = "1"
serde = { version = "1", features = ["derive"] }
substrate = { version = "<=0.6.0", registry = "substrate", path = "../../substrate" }
sky130pdk = { version = "<=0.6.0", registry = "substrate", path = "../../pdks/sky130pdk" }
spectre = { version = "<=0.6.0", registry = "substrate", path = "../../tools/spectre" }

[lib]
proc-macro = true
