[package]
name = "examples"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1"
proc-macro-error = "1"
textwrap = "0.16"

[dev-dependencies]
arcstr = "1"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
substrate = { version = "<=0.8.1", registry = "substrate", path = "../../substrate" }
sky130pdk = { version = "<=0.8.1", registry = "substrate", path = "../../pdks/sky130pdk" }
spectre = { version = "<=0.9.1", registry = "substrate", path = "../../tools/spectre" }
spice = { version = "<=0.7.1", registry = "substrate", path = "../../libs/spice" }

[lib]
proc-macro = true
