[package]
name = "sky130_inverter"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
substrate = { version = "*", registry = "substrate" }
spectre = { version = "*", registry = "substrate" }
sky130pdk = { version = "*", registry = "substrate" }

serde = { version = "1", features = ["derive"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"

# This feature flag allows us to control which tests are run.
# We don't want to run tests that use Spectre when we are developing locally.
# If you are copying this example, you can remove this section
# and remove the `#[cfg(feature = "spectre")]` in `src/tb.rs`.
[features]
spectre =  []
