[package]
name = "spice_vdivider"
version = "0.0.0"
edition = "2021"
publish = false

# begin-code-snippet dependencies
[dependencies]
substrate = { version = "0.8.1", registry = "substrate" }
spice = { version = "0.7.1", registry = "substrate" }

serde = { version = "1", features = ["derive"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
# end-code-snippet dependencies
