[package]
name = "vdivider"
version = "0.1.0"
edition = "2021"

[dependencies]
arcstr = { version = "1", features = ["serde"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1.0.217", features = ["derive"] }
substrate = { version = "0.8.1", registry = "substrate", path = "../../substrate" }
spectre = { version = "0.9.1", registry = "substrate", path = "../../tools/spectre" }
