[package]
name = "atoll"
version = "0.1.3"
edition = "2021"
description = "Automatic transformation of logical layout"
license = "BSD-3-Clause"

[dependencies]
substrate = { version = "0.10.2", registry = "substrate", path = "../../substrate" }
layir = { version = "0.2.1", registry = "substrate", path = "../layir" }
grid = { version = "0.13.0", features = ["serde"] }
ena = "0.14"
tracing = "0.1"
num = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
pathfinding = "4.8.0"
indexmap = "2"
rustc-hash = "1"
cache = { version = "0.7.1", registry = "substrate", path = "../cache" }
downcast-rs = "2"
slotmap = "1"
itertools = "0.14"
