[package]
name = "atoll"
version = "0.1.4"
edition = "2024"
description = "Automatic transformation of logical layout"
license = "BSD-3-Clause"

[dependencies]
substrate = { version = "0.10.3", registry = "substrate", path = "../../substrate" }
layir = { version = "0.2.2", registry = "substrate", path = "../layir" }
enumify = { version = "0.2.2", registry = "substrate", path = "../enumify" }
grid = { version = "1.0", features = ["serde"] }
ena = "0.14"
tracing = "0.1"
num = "0.4"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
indexmap = "2"
rustc-hash = "2"
cache = { version = "0.7.2", registry = "substrate", path = "../cache" }
arcstr = { version = "1.2.0", features = ["serde"] }
itertools = "0.14"
downcast-rs = "2"
slotmap = "1"
