[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
once_cell = "1"
tonic = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
tokio-stream = "0.1"
tokio-util = "0.7"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
crossbeam-channel = "0.5"
anyhow = "1"

[[bin]]
name="server"
path="./src/bin/server.rs"
