[package]
name = "cache"
version = "0.5.0"
edition = "2021"
description = "A general purpose cache with possibly multiple remote servers for storing and retrieving data."
license = "BSD-3-Clause"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
once_cell = "1"
tonic = "0.10"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
prost = "0.12"
prost-types = "0.12"
rusqlite = { version = "0.30", features = ["bundled"] }
fs4 = { version = "0.7", features = ["tokio"] }
thiserror = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tokio-rusqlite = "0.5"
sha2 = "0.10"
hex = "0.4"
flexbuffers = "2"
path-absolutize = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
backoff = "0.4"
regex = "1.9"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
crossbeam-channel = "0.5"
anyhow = "1"
test-log = { version = "0.2", default_features = false, features = ["trace"] }

[[bin]]
name="server"
path="./src/bin/server.rs"
