[package]
name = "enumify_macros"
version = "0.3.1"
edition = "2021"
description = "Macros for the enumify crate"
license = "BSD-3-Clause"

[dependencies]
darling = "0.20"
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
convert_case = "0.7"

macrotools = { version = "0.2.0", registry = "substrate", path = "../macrotools" }

[lib]
proc-macro = true
