[package]
name = "enumify_macros"
version = "0.3.2"
edition = "2024"
description = "Macros for the enumify crate"
license = "BSD-3-Clause"

[dependencies]
darling = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
convert_case = { workspace = true }

macrotools = { version = "0.2.1", registry = "substrate", path = "../macrotools" }

[lib]
proc-macro = true
