[package]
name = "gds"
version = "0.4.1"
edition = "2024"

[dependencies]
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
derive_more = { version = "2", features = ["full"] }
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tempfile = { version = "3", optional = true }
arcstr = { version = "1", features = ["serde"] }
textwrap = "0.16"

[dev-dependencies]
tempfile = {version = "3"}

[features]
selftest = ["tempfile"]
