[package]
name = "gdsconv"
version = "0.2.1"
edition = "2021"

[dependencies]
arcstr = { version = "1", features = ["serde"] }
tracing = "0.1"
slotmap = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

layir = { version = "0.2.1", registry = "substrate", path = "../layir" }
gds = { version = "0.4.1", registry = "substrate", path = "../gds" }
geometry = { version = "0.7.1", registry = "substrate", path = "../geometry" }
