[package]
name = "gdsconv"
version = "0.2.2"
edition = "2024"

[dependencies]
arcstr = { version = "1", features = ["serde"] }
tracing = "0.1"
slotmap = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

layir = { version = "0.2.2", registry = "substrate", path = "../layir" }
gds = { version = "0.4.2", registry = "substrate", path = "../gds" }
geometry = { version = "0.7.2", registry = "substrate", path = "../geometry" }
