[package]
name = "geometry"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
array_map = { version = "0.4", features = ["derive", "serde", "std"] }
impl-trait-for-tuples = "0.2"
approx = "0.5"
num-rational = "0.4"

geometry_macros = { version = "0.0.1", registry = "substrate", path = "../geometry_macros" }
