[package]
name = "geometry"
version = "0.7.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
array_map = { version = "0.4", features = ["derive", "serde", "std"] }
impl-trait-for-tuples = "0.2"

geometry_macros = { version = "0.1.1", registry = "substrate", path = "../geometry_macros" }
