[package]
name = "geometry_macros"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1"
proc-macro-error = "1"

macrotools = { version = "0.0.0", registry = "substrate", path = "../macrotools" }

[lib]
proc-macro = true
