[package]
name = "geometry_macros"
version = "0.1.2"
edition = "2024"

[dependencies]
darling = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }

macrotools = { version = "0.2.1", registry = "substrate", path = "../macrotools" }

[lib]
proc-macro = true
