[package]
name = "layir"
version = "0.2.0"
edition = "2021"

[dependencies]
arcstr = { version = "1", features = ["serde"] }
tracing = "0.1"
serde = "1"
indexmap = { version = "2", features = ["serde"] }

uniquify = { version = "0.4.0", registry = "substrate", path = "../uniquify" }
geometry = { version = "0.7.0", registry = "substrate", path = "../geometry" }

