[package]
name = "nutlex"
version = "0.4.1"
edition = "2021"
description = "Parses SPICE nutmeg files (aka rawfiles)"

[dependencies]
nom = "8.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

enumify = { version = "0.2.1", path = "../enumify", registry = "substrate" }

[dev-dependencies]
approx = "0.5"

