[package]
name = "nutlex"
version = "0.4.3"
edition = "2024"
description = "Parses SPICE nutmeg files (aka rawfiles)"

[dependencies]
nom = "8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

enumify = { version = "0.2.2", path = "../enumify", registry = "substrate" }

[dev-dependencies]
approx = "0.5"

